improved nav and added contact page content

--- a/css/main.css
+++ b/css/main.css
@@ -26,17 +26,21 @@ header nav {
   width: 100%;
 }
 header nav ul {
-  text-align: center;
+  text-align: justify;
   margin: 0;
   padding: 0;
   padding-top: 32px;
   width: 100%;
 }
+header nav ul:after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+}
 header nav ul li {
   display: inline-block;
-  width: 32%;
   margin: 0;
-  padding: 0;
+  padding: 0 32px;
 }
 header nav ul li a {
   text-decoration: none;
@@ -48,9 +52,13 @@ header nav ul li a:link, header nav ul li a:visited {
 header nav ul li a:hover, header nav ul li a:active {
   color: #AAAAAA;
 }
-h2 {
+h2, h3 {
   margin: 0;
-  padding-top: 300px;
+  padding-top: 250px;
+}
+
+#notop {
+  padding-top: 32px;
 }
 
 #home {
@@ -64,4 +72,21 @@ h2 {
   background-color: black;
   margin-top: 100px;
   display: inline-block;
+}
+
+#contactinfo {
+  text-align: center;
+  display: inline-block;
+}
+
+#contactinfo a {
+  text-decoration: none;
+  margin: 0;
+}
+
+#contactinfo a:link, #contactinfo a:visited {
+  color: #000000;
+}
+#contactinfo a:hover, #contactinfo a:active {
+  color: #555555;
 }
