--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
   text-align: center;
 }
 header {
+  font-size: 18px;
   position: fixed;
   width: 100%;
   padding: 0;
@@ -23,14 +24,11 @@ header {
 header nav {
   padding: 0;
   margin: 0;
-  width: 100%;
 }
 header nav ul {
   text-align: justify;
   margin: 0;
-  padding: 0;
-  padding-top: 32px;
-  width: 100%;
+  padding: 32px 16px 0 16px;
 }
 header nav ul:after {
   content: '';
@@ -40,7 +38,7 @@ header nav ul:after {
 header nav ul li {
   display: inline-block;
   margin: 0;
-  padding: 0 32px;
+  padding: 0 4px;
 }
 header nav ul li a {
   text-decoration: none;
@@ -72,6 +70,45 @@ h2, h3 {
   background-color: black;
   margin-top: 100px;
   display: inline-block;
+}
+
+#sortingCanvas {
+  margin-top: 100px;
+  display: inline-block;
+  width: 80%;
+  height: 50%;
+}
+
+#sortingControls {
+  text-align: justify;
+  padding: 32px;
+}
+
+#sortingControls:after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+}
+
+.sortingControlItem {
+  display: inline-block;
+  text-align: center;
+}
+
+.sortingControlItem input, .sortingControlItem select {
+  background-color: #AAAAAA;
+  border-radius: 4px;
+  border: 1px solid black;
+}
+
+.sortingControlItem input:focus, .sortingControlItem select:focus {
+  background-color: #CCCCCC;
+  border: 2px solid black;
+  outline: none;
+}
+
+#numElements {
+  width: 48px;
 }
 
 #contactinfo {
